# homework1-CT-JL

./: .gitignore  .gitmodules  README.md  conjugate_gradient.py  optimizer.py  requirements.txt
homework1/: optimizer.py
homework1/example/: Ab.csv
homework2/: .gitignore  README.md
homework2/src/: CMakeLists.txt  ComputeArithmetic.cc  ComputeArithmetic.hh  ComputePi.cc  ComputePi.hh  DumperSeries.cc  DumperSeries.hh  PrintSeries.cc  PrintSeries.hh  Series.cc  Series.hh  WriteSeries.cc  WriteSeries.hh  main.cc  plot.py
homework3/: .gitignore  README.md
homework3/heat-fft-solver/: CMakeLists.txt  compute_temperature.cc  compute_temperature.hh  fft.hh  gen_domain.csv  generate_heat_source.py  material_points_factory.cc  test1.csv  test2.csv  test3.csv  test_fft.cc  test_temperature.cc
homework4/: .gitignore
homework4/particles-pybind/: CMakeLists.txt  README.md  for_checking.py  init_scaled.csv  main.cc  main.py  material_point.cc  material_point.hh  material_points_factory.cc  material_points_factory.hh  material_points_factory_pybind.cc  my_types.hh  optimiser  optimiser.py  optimiser_backup.py  planets_factory.cc  planets_factory.hh  pypart.cc  vector_inline.hh
homework4/particles-pybind/trajectories/: step-0000.csv  step-0001.csv  step-0002.csv  step-0003.csv  step-0004.csv  step-0005.csv  step-0006.csv  step-0007.csv  step-0008.csv  step-0009.csv  step-0010.csv  step-0011.csv  step-0012.csv  step-0013.csv  step-0014.csv  step-0015.csv  step-0016.csv  step-0017.csv  step-0018.csv  step-0019.csv  step-0020.csv  step-0021.csv  step-0022.csv  step-0023.csv  (+341 more)
